# cosmic-maps

./: Cargo.toml  README.md  justfile
i18n/en/: cosmic_maps.ftl
resources/: com.system76.CosmicMaps.desktop
src/: app.rs  bookmarks.rs  config.rs  i18n.rs  location.rs  main.rs  menu.rs  poi.rs  search.rs
src/map/: canvas.rs  mod.rs  state.rs  tiles.rs
