[package]
name = "cosmic-maps"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A fast, native map viewer for the COSMIC Desktop"
repository = "https://github.com/example/cosmic-maps"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cosmic-config = { git = "https://github.com/pop-os/libcosmic.git" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lru = "0.16"
ron = "0.8"
image = { version = "0.25", default-features = false, features = ["png"] }
i18n-embed = { version = "0.16", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.10"
rust-embed = "8.8.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "sync", "fs"] }
open = "5.3.2"
dbus = "0.9"
urlencoding = "2.1"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    "about",
    "single-instance",
    "wgpu",
    "xdg-portal",
    "tokio",
]

[profile.release]
opt-level = 3
lto = "thin"
